--- a/DrugRegimen/static/home/pharmacisthome.html
+++ b/DrugRegimen/static/home/pharmacisthome.html
@@ -72,6 +72,11 @@
         #prescription-medications ul {
             display: inline;
         }
+
+        #bg-img {
+            background-image: url({% static 'admin/img/bgdoctor.png' %});
+            height: 100%;
+        }
     </style>
 </head>
 
@@ -93,7 +98,7 @@
                 </div>
             </nav>
         </header>
-        <main style="background-image: url({% static 'admin/img/bgpharmacy.png' %}); height: 100%;"><!-- height: 100% works lovely for pages with more content than can fit on screen at one time. for pages with less content than that though, we need to find a better solution then assigning a static height, eg 800px-->
+        <div id="bg-img">
             <div id="subnav">
                 <h3>Pharmacy Home</h2>
             </div>
@@ -147,7 +152,7 @@
                     </div>
                 </div>
                 {% endfor %}
-        </main>
+            </div>
         <footer class="footer">
             <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
             <div class="text">Copyright &copy; Team 5 2021</div>
