--- a/DrugRegimen/static/home/patienthome.html
+++ b/DrugRegimen/static/home/patienthome.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient Home</title>
-    <link rel="shortcut icon" type="image/png" href="/static/admin/img/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="/static/admin/img/favicon.png" />
     {% load static %}
     <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
     <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
@@ -60,13 +60,19 @@
         #time-last-taken p {
             display: inline;
         }
+
+        #bg-img {
+            background-image: url({% static 'admin/img/bgdoctor.png' %});
+            height: 100%;
+        }
     </style>
 </head>
 
 <body>
     <div id="page-container">
         <header>
-            <div class="imgbrand"><img style="margin-left: 50px;" width="8%" height="8%" src="{% static 'admin/img/regx.png' %}"></div>
+            <div class="imgbrand"><img style="margin-left: 50px;" width="8%" height="8%"
+                    src="{% static 'admin/img/regx.png' %}"></div>
             <nav class="navbar">
                 <div id="current-page-link"><a href='http://127.0.0.1:8000/home' class="left-nav">Home</a></div>
                 <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
@@ -81,15 +87,16 @@
                 </div>
             </nav>
         </header>
-        <main style="background-image: url({% static 'admin/img/bgpatient.png' %}); height: 800px;"><!-- height: 100% works lovely for pages with more content than can fit on screen at one time. for pages with less content than that though, we need to find a better solution then assigning a static height, eg 800px-->
-                <div id="subnav" style="border-top: 50px;">
-                    <h3>Patient Home</h2>
-                </div>
-                <div id="pagecontent">
+        <div id="bg-img">
+            <div id="subnav" style="border-top: 50px;">
+                <h3>Patient Home</h2>
+            </div>
+            <div id="pagecontent">
                 {% for medication in medications %}
                 <div class="prescription-summary">
                     <div class="prescription-details">
-                        <a href='#' class="prescription-details" id="medication">{{ medication.drug }} {{ medication.doseValue }} {{ medication.doseUnit }}</a>
+                        <a href='#' class="prescription-details" id="medication">{{ medication.drug }} {{
+                            medication.doseValue }} {{ medication.doseUnit }}</a>
                     </div>
                     <div class="prescription-details" id="time-last-taken">
                         <p>09:30 AM</p>
@@ -105,7 +112,7 @@
                 </div>
                 {% endfor %}
             </div>
-        </main>
+        </div>
         <footer class="footer">
             <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
             <div class="text">Copyright &copy; Team 5 2021</div>
