--- a/DrugRegimen/static/prescribe-medication/prescribe.html
+++ b/DrugRegimen/static/prescribe-medication/prescribe.html
@@ -76,6 +76,10 @@
     #rm-all-drugs {
       background-color: #b83333;
     }
+    #bg-img {
+            background-image: url({% static 'admin/img/bgdoctor.png' %});
+            height: 100%;
+    }
   </style>
   <script type='text/javascript'>
     var drugcount = 0;
@@ -178,7 +182,7 @@
         </div>
       </nav>
     </header>
-    <main style="background-image: url({% static 'admin/img/bgdoctor.png' %}); height: 800px;"><!-- height: 100% works lovely for pages with more content than can fit on screen at one time. for pages with less content than that though, we need to find a better solution then assigning a static height, eg 800px-->
+    <div id="bg-img">
       <div id="subnav">
         <h3>Prescribe Medication</h2>
       </div>
@@ -215,7 +219,7 @@
           </form>
         </div>
       </div>
-    </main>
+    </div>
     <footer class="footer">
       <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
       <div class="text">Copyright &copy; Team 5 2021</div>
