--- a/DrugRegimen/static/about/patientabout.html
+++ b/DrugRegimen/static/about/patientabout.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
 
     <style>
+        #bg-img { /* this needs to be on each page as the line below this doesn't seem to work when linked in a remote css file */
+            background-image: url({% static 'admin/img/bgdoctor.png' %});
+            height: 100%;
+            min-height: 800px;
+        }
+
         .flex-container {
             display: flex;
             margin: 0 auto;
@@ -93,7 +99,7 @@
                 </div>
             </nav>
         </header>
-        <main style="background-image: url({% static 'admin/img/bgpatient.png' %}); height: 100%;"><!-- height: 100% works lovely for pages with more content than can fit on screen at one time. for pages with less content than that though, we need to find a better solution then assigning a static height, eg 800px-->
+        <main id="bg-img">
             <div id="subnav">
                 <h3>Patient About</h2>
               </div>
