--- a/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
+++ b/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
@@ -11,6 +11,11 @@
   <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
   <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
   <style>
+    #bg-img { /* this needs to be on each page as the line below this doesn't seem to work when linked in a remote css file */
+        background-image: url({% static 'admin/img/bgdoctor.png' %});
+        height: 100%;
+        min-height: 800px;
+    }
     * {
       box-sizing: border-box;
     }
@@ -104,10 +109,6 @@
       background-color: #dddddd;
     }
 
-    #bg-img {
-            background-image: url({% static 'admin/img/bgdoctor.png' %});
-            height: 100%;
-        }
   </style>
 </head>
 
@@ -130,47 +131,46 @@
         </div>
       </nav>
     </header>
-      <div id="bg-img">
+    <main id="bg-img">
         <div id="subnav">
           <h3>Search Medication Conflicts</h2>
         </div>
         <div id="pagecontent">
-        <div class="topnav">
-          <a>Enter medications:</a>
-          <form action="/check-interactions" method="post">
-            {% csrf_token %}
-            <div class="search-container">
-              <input type="text" id="search2" name="search2">
-              <button type="submit"><i class="fa fa-search"></i></button>
-            </div>
-            <div class="search-container">
-              <input type="text" id="search1" name="search1">
-              <button type="submit"><i class="fa fa-search"></i></button>
-            </div>
-          </form>
+          <div class="topnav">
+            <a>Enter medications:</a>
+            <form action="/check-interactions" method="post">
+              {% csrf_token %}
+              <div class="search-container">
+                <input type="text" id="search2" name="search2">
+                <button type="submit"><i class="fa fa-search"></i></button>
+              </div>
+              <div class="search-container">
+                <input type="text" id="search1" name="search1">
+                <button type="submit"><i class="fa fa-search"></i></button>
+              </div>
+            </form>
+          </div>
+          <div style="padding-left:16px">
+            <h3>Results {{ drug1 }} {{ drug2 }}</h3>
+          </div>
+          <table>
+            <tr>
+              <th>Drug Interaction</th>
+              <th>Explanation</th>
+              <th>Action</th>
+              <th>Warning</th>
+            </tr>
+            {% for interaction in interactions %}
+            <tr>
+              <td>{{ interaction.0 }}</td>
+              <td>{{ interaction.1 }}</td>
+              <td>Avoid concurrent use.</td>
+              <td>{{ interaction.2 }}</td>
+            </tr>
+            {% endfor %}
+          </table>
         </div>
-
-        <div style="padding-left:16px">
-          <h3>Results {{ drug1 }} {{ drug2 }}</h3>
-        </div>
-        <table>
-          <tr>
-            <th>Drug Interaction</th>
-            <th>Explanation</th>
-            <th>Action</th>
-            <th>Warning</th>
-          </tr>
-          {% for interaction in interactions %}
-          <tr>
-            <td>{{ interaction.0 }}</td>
-            <td>{{ interaction.1 }}</td>
-            <td>Avoid concurrent use.</td>
-            <td>{{ interaction.2 }}</td>
-          </tr>
-          {% endfor %}
-        </table>
-      </div>
-    </div>
+     </main>
     <footer class="footer">
       <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
       <div class="text">Copyright &copy; Team 5 2021</div>
