--- a/DrugRegimen/static/home/doctorhome.html
+++ b/DrugRegimen/static/home/doctorhome.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
     <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
     <style>
+        #bg-img { /* this needs to be on each page as the line below this doesn't seem to work when linked in a remote css file */
+            background-image: url({% static 'admin/img/bgdoctor.png' %});
+            height: 100%;
+            min-height: 800px;
+        }
         .patient-summary {
             position: relative;
             overflow: hidden;
@@ -288,7 +293,7 @@
                 </div>
             </nav>
         </header>
-        <div id="bg-img">
+        <main id="bg-img">
             <div id="subnav">
                 <h3>Doctor Home</h2>
             </div>
@@ -349,7 +354,7 @@
                 {% endif %}
                 {% endfor %}
             </div>
-        </div >
+        </main >
         <footer class="footer">
             <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
             <div class="text">Copyright &copy; Team 5 2021</div>
