--- a/DrugRegimen/static/home/patienthome.html
+++ b/DrugRegimen/static/home/patienthome.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
     <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
     <style>
+        #bg-img { /* this needs to be on each page as the line below this doesn't seem to work when linked in a remote css file */
+            background-image: url({% static 'admin/img/bgdoctor.png' %});
+            height: 100%;
+            min-height: 800px;
+        }
+
         .prescription-summary {
             position: relative;
             overflow: hidden;
@@ -60,14 +66,8 @@
         #time-last-taken p {
             display: inline;
         }
-
-        #bg-img {
-            background-image: url({% static 'admin/img/bgdoctor.png' %});
-            height: 100%;
-        }
     </style>
 </head>
-
 <body>
     <div id="page-container">
         <header>
@@ -87,7 +87,7 @@
                 </div>
             </nav>
         </header>
-        <div id="bg-img">
+        <main id="bg-img">
             <div id="subnav" style="border-top: 50px;">
                 <h3>Patient Home</h2>
             </div>
@@ -112,7 +112,7 @@
                 </div>
                 {% endfor %}
             </div>
-        </div>
+        </main>
         <footer class="footer">
             <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
             <div class="text">Copyright &copy; Team 5 2021</div>
