--- a/DrugRegimen/static/prescribe-medication/prescribe.html
+++ b/DrugRegimen/static/prescribe-medication/prescribe.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
   <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
   <style>
+      #bg-img { /* this needs to be on each page as the line below this doesn't seem to work when linked in a remote css file */
+          background-image: url({% static 'admin/img/bgdoctor.png' %});
+          height: 100%;
+          min-height: 800px;
+      }
     input[type=text],
     select {
       width: 100%;
@@ -182,11 +187,11 @@
         </div>
       </nav>
     </header>
-    <div id="bg-img">
+    <main id="bg-img">
       <div id="subnav">
         <h3>Prescribe Medication</h2>
       </div>
-    <div id="pagecontent">
+      <div id="pagecontent">
         <div class=prescribe>
           <form action="/write-prescription" method="post">
               {% csrf_token %}
@@ -219,7 +224,7 @@
           </form>
         </div>
       </div>
-    </div>
+    </main>
     <footer class="footer">
       <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
       <div class="text">Copyright &copy; Team 5 2021</div>
