--- a/DrugRegimen/static/help/doctorhelp.html
+++ b/DrugRegimen/static/help/doctorhelp.html
@@ -15,6 +15,7 @@
             background-image: url({% static 'admin/img/bgdoctor.png' %});
             height: 100%;
             min-height: 800px;
+            background-size: 100%;
         }
     </style>
     <script type="text/javascript" src="../admin/js/faq.js"></script>
@@ -161,7 +162,8 @@
                 </div>
             </nav>
         </header>
-        <main id="bg-img"> 
+        <main id="bg-img">
+            </br>
                 <div id="subnav">
                     <h3>Doctor Help</h2>
                 </div>
@@ -223,8 +225,11 @@
             </div>
         </main>
         <footer class="footer">
-            <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
-            <div class="text">Copyright &copy; Team 5 2021</div>
+            <div class="spacer">
+                <div class="imgbrandleft"><img src="{% static 'admin/img/synergy.png' %}" style="height: 55px; margin-bottom: 15px;"></div>
+                <div class="text">Copyright &copy; Team 5 2021</div>
+                <div class="imgbrandright"><img src="{% static 'admin/img/tcdlogo.jpeg' %}" style="height: 85px;"></div>
+            </div>
         </footer>
     </div>
 </body>
