--- a/DrugRegimen/static/account/patientaccount.html
+++ b/DrugRegimen/static/account/patientaccount.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
     <style>
         #bg-img { /* this needs to be on each page as the line below this doesn't seem to work when linked in a remote css file */
-            background-image: url({% static 'admin/img/bgdoctor.png' %});
+            background-image: url({% static 'admin/img/bgpatient.png' %});
             height: 100%;
             min-height: 800px;
+            background-size: 100%;
         }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -44,6 +45,7 @@
         </nav>
     </header>
     <main id="bg-img">
+            </br>
             <div id="subnav">
                 <h3>Patient Account</h2>
             </div>
@@ -104,9 +106,12 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
-        <div class="text">Copyright &copy; Team 5 2021</div>
-</footer>
+        <div class="spacer">
+            <div class="imgbrandleft"><img src="{% static 'admin/img/synergy.png' %}" style="height: 55px; margin-bottom: 15px;"></div>
+            <div class="text">Copyright &copy; Team 5 2021</div>
+            <div class="imgbrandright"><img src="{% static 'admin/img/tcdlogo.jpeg' %}" style="height: 85px;"></div>
+        </div>
+    </footer>
 </body>
 
 </html>
