--- a/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
+++ b/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
@@ -12,9 +12,10 @@
   <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
   <style>
     #bg-img { /* this needs to be on each page as the line below this doesn't seem to work when linked in a remote css file */
-        background-image: url({% static 'admin/img/bgdoctor.png' %});
+        background-image: url({% static 'admin/img/bgpatient.png' %});
         height: 100%;
         min-height: 800px;
+        background-size: 100%;
     }
     * {
       box-sizing: border-box;
@@ -132,6 +133,7 @@
       </nav>
     </header>
     <main id="bg-img">
+      </br>
         <div id="subnav">
           <h3>Search Medication Conflicts</h2>
         </div>
@@ -171,9 +173,12 @@
           </table>
         </div>
      </main>
-    <footer class="footer">
-      <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
-      <div class="text">Copyright &copy; Team 5 2021</div>
+     <footer class="footer">
+      <div class="spacer">
+          <div class="imgbrandleft"><img src="{% static 'admin/img/synergy.png' %}" style="height: 55px; margin-bottom: 15px;"></div>
+          <div class="text">Copyright &copy; Team 5 2021</div>
+          <div class="imgbrandright"><img src="{% static 'admin/img/tcdlogo.jpeg' %}" style="height: 85px;"></div>
+      </div>
     </footer>
   </div>
 </body>
