--- a/DrugRegimen/static/home/doctorhome.html
+++ b/DrugRegimen/static/home/doctorhome.html
@@ -14,6 +14,7 @@
             background-image: url({% static 'admin/img/bgdoctor.png' %});
             height: 100%;
             min-height: 800px;
+            background-size: 100%;
         }
         .patient-summary {
             position: relative;
@@ -294,6 +295,7 @@
             </nav>
         </header>
         <main id="bg-img">
+            </br>
             <div id="subnav">
                 <h3>Doctor Home</h2>
             </div>
@@ -356,8 +358,11 @@
             </div>
         </main >
         <footer class="footer">
-            <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
-            <div class="text">Copyright &copy; Team 5 2021</div>
+            <div class="spacer">
+                <div class="imgbrandleft"><img src="{% static 'admin/img/synergy.png' %}" style="height: 55px; margin-bottom: 15px;"></div>
+                <div class="text">Copyright &copy; Team 5 2021</div>
+                <div class="imgbrandright"><img src="{% static 'admin/img/tcdlogo.jpeg' %}" style="height: 85px;"></div>
+            </div>
         </footer>
     </div>
 </body>
