--- a/DrugRegimen/static/home/pharmacisthome.html
+++ b/DrugRegimen/static/home/pharmacisthome.html
@@ -10,17 +10,19 @@
     <link rel="stylesheet" href="{% static 'admin/css/pagecontent.css' %}">
     <link rel="stylesheet" href="{% static 'admin/css/navbaretc.css' %}">
     <style>
+        
         #bg-img { /* this needs to be on each page as the line below this doesn't seem to work when linked in a remote css file */
-            background-image: url({% static 'admin/img/bgdoctor.png' %});
+            background-image: url({% static 'admin/img/bgpharmacy.png' %});
             height: 100%;
             min-height: 800px;
+            background-size: 100%;
         }
 
         .patient-summary {
             position: relative;
             overflow: hidden;
             margin: 15px 15px;
-            background-color: black;
+            background-color: #f4f4f4;
             border-radius: 20px;
             border: 1px solid #4e4d4c;
         }
@@ -29,13 +31,13 @@
             font-size: larger;
             text-decoration: none;
             color: rgb(0, 0, 0);
-            background-color: rgb(187, 187, 187);
+            background-color: #f4f4f4;
             text-align: center;
             width: auto;
         }
 
         .patient-summary a:hover {
-            background-color: #01493d;
+            background-color: #028d76;
             color: white;
         }
 
@@ -78,18 +80,14 @@
         #prescription-medications ul {
             display: inline;
         }
-
-        #bg-img {
-            background-image: url({% static 'admin/img/bgdoctor.png' %});
-            height: 100%;
-        }
+        
     </style>
 </head>
 
 <body>
     <div id="page-container">
         <header>
-            <div class="imgbrand"><img style="margin-left: 50px;" width="8%" height="8%" src="{% static 'admin/img/regx.png' %}"></div>
+            <img style="margin-left: 50px;" width="8%" height="8%" src="{% static 'admin/img/regx.png' %}">
             <nav class="navbar">
                 <div id="current-page-link"><a href='http://127.0.0.1:8000/home' class="left-nav">Home</a></div>
                 <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
@@ -105,13 +103,14 @@
             </nav>
         </header>
         <main id="bg-img">
-            <div id="subnav">
+            </br>
+            <div id="subnav"style="border-top: 100px;">
                 <h3>Pharmacy Home</h2>
             </div>
             <div id="pagecontent">
                 <h2>Not dispensed:</h2>
                 {% for prescription in notDispensed %}
-                <div class="patient-summary" style="background-image: url({% static 'admin/img/qrart.png' %});">
+                <div class="patient-summary">
                     <div class="patient-details">
                         <a href='#' class="patient-details" id="patient-name">{{ prescription.0.patientId }}</a>
                     </div>
@@ -137,7 +136,7 @@
                 {% endfor %}
                 <h2>Dispensed (Not Collected):</h2>
                 {% for prescription in dispensedNotReceived %}
-                <div class="patient-summary" style="background-image: url({% static 'admin/img/qrart.png' %});">
+                <div class="patient-summary">
                     <div class="patient-details">
                         <a href='#' class="patient-details" id="patient-name">{{ prescription.0.patientId }}</a>
                     </div>
@@ -161,8 +160,11 @@
             </div>
         </main>
         <footer class="footer">
-            <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
-            <div class="text">Copyright &copy; Team 5 2021</div>
+            <div class="spacer">
+                <div class="imgbrandleft"><img src="{% static 'admin/img/synergy.png' %}" style="height: 55px; margin-bottom: 15px;"></div>
+                <div class="text">Copyright &copy; Team 5 2021</div>
+                <div class="imgbrandright"><img src="{% static 'admin/img/tcdlogo.jpeg' %}" style="height: 85px;"></div>
+            </div>
         </footer>
     </div>
 
