--- a/DrugRegimen/static/manage-patients/manage-patients.html
+++ b/DrugRegimen/static/manage-patients/manage-patients.html
@@ -14,6 +14,7 @@
             background-image: url({% static 'admin/img/bgdoctor.png' %});
             height: 100%;
             min-height: 800px;
+            background-size: 100%;
         }
     </style>
 </head>
@@ -37,7 +38,8 @@
                 </div>
             </nav>
         </header>
-        <main id="bg-img">           
+        <main id="bg-img">          
+                </br> 
                 <div id="subnav">
                     <h3>Manage Patients</h2>
                 </div>
@@ -67,8 +69,11 @@
             </div>
         </main>
         <footer class="footer">
-            <div class="imgbrand"><img src="{% static 'admin/img/synergy.png' %}"></div>
-            <div class="text">Copyright &copy; Team 5 2021</div>
+            <div class="spacer">
+                <div class="imgbrandleft"><img src="{% static 'admin/img/synergy.png' %}" style="height: 55px; margin-bottom: 15px;"></div>
+                <div class="text">Copyright &copy; Team 5 2021</div>
+                <div class="imgbrandright"><img src="{% static 'admin/img/tcdlogo.jpeg' %}" style="height: 85px;"></div>
+            </div>
         </footer>
     </div>
 </body>
