doctor home page entries touched up

--- a/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
+++ b/DrugRegimen/static/comprehensive_conflicts/comprehensive_conflicts.html
@@ -138,7 +138,7 @@
           <h3>Search Medication Conflicts</h2>
         </div>
         <div id="pagecontent">
-          <div class="topnav">
+          <div class="topnav" style="margin-right: 10px;">
             <a>Enter medications:</a>
             <form action="/check-interactions" method="post">
               {% csrf_token %}
