--- a/DrugRegimen/static/recordvideo/recordvideo.html
+++ b/DrugRegimen/static/recordvideo/recordvideo.html
@@ -104,6 +104,7 @@
       <nav class="navbar">
         <a href='http://127.0.0.1:8000/home' class="left-nav">Home</a>
         <a href='http://127.0.0.1:8000/about' class="left-nav">About</a>
+        <a href='http://127.0.0.1:8000/drug-interactions' class="left-nav">Drug Interactions</a>
         <a href='http://127.0.0.1:8000/help' class="left-nav">Help</a>
         <div class="dropdown">
           <a href='#' class="dropbtn">{{ username }}</a>
