--- a/DrugRegimen/static/home/patienthome.html
+++ b/DrugRegimen/static/home/patienthome.html
@@ -21,21 +21,22 @@
             position: relative;
             overflow: hidden;
             margin: 15px 15px;
-            background-color: rgb(187, 187, 187);
+            background-color: #f4f4f4;
             border-radius: 20px;
+            border: 1px solid #4e4d4c;
         }
 
         .prescription-details a {
             font-size: larger;
             text-decoration: none;
             color: rgb(0, 0, 0);
-            background-color: rgb(187, 187, 187);
+            background-color: #f4f4f4;
             text-align: center;
             width: auto;
         }
 
         .prescription-summary a:hover {
-            background-color: #01493d;
+            background-color: #028d76;
             color: white;
         }
 
@@ -51,7 +52,7 @@
             display: inline-block;
             box-sizing: border-box;
             text-align: center;
-            padding: 52px 0px;
+            padding: 30px 0px;
         }
 
         .prescription-details li {
